# til-26-ae

./: .gitignore  AE-with-til_environment.md  LICENSE  README.md  lefthook.yml  play.py  pyproject.toml  requirements.txt
til_environment/: __init__.py  actions.py  arena.py  bomberman_config.yaml  bomberman_env.py  config.py  dynamics.py  helpers.py  observation.py  renderer.py  types.py
til_environment/docs/: ARCHITECTURE.md  ENTITY_REFACTOR.md  RUBRICS.md  to_tell_participants_about.md  walledge_refactor.md
til_environment/entities/: __init__.py  base.py  dynamic.py  geometry.py  protocols.py  registry.py  static.py
til_environment/events/: __init__.py  base.py  rewards.py
