[build-system]
requires = ["setuptools >= 75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "til_environment"
description = "RL environment for TIL-AI 2026."
version = "1.4.0a1"
dependencies = [
    "gymnasium==1.1.1",
    "pygame>=2.1.3",
    "pettingzoo==1.25.0",
    "mazelib==0.9.16",
    "supersuit==3.9.3",
    "omegaconf>=2.3.0",
    "imageio[ffmpeg]>=2.28",
    "perlin-noise>=1.14",
]
requires-python = ">=3.10"


[tool.uv.workspace]
members = [
    "selfplay",
    "selfplay/til-26-ae",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "lefthook>=2.1.6",
    "matplotlib>=3.10.9",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[tool.ruff.lint]
ignore = ["F401", "E501", "E722"]

[tool.pylint]
extension-pkg-whitelist="pygame"
